Set Alpha versioning code fails for nodes outside of node group #84708

Closed
opened 2021-01-14 12:43:12 +01:00 by Robert Guetzkow · 4 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89

Blender Version
Broken:

  • 2.93.0 Alpha, branch: master, commit date: 2021-01-14 04:55, hash: 3e4dd7b000
  • 2.92.0 Beta, branch: master, commit date: 2021-01-14 04:53, hash: a4226a050b
    Worked: For nodes outside of nodes groups, but not for nodes groups, before commit 38df935c09

Short description of error
Loading a file in Blender 2.92 and 2.93 created with Blender 2.91 with a Set Alpha node in the compositing node tree outside of a node group, results in an undefined node.

Exact steps for others to reproduce the error

  • Open the attached file created with Blender 2.91
  • Observe that the Set Alpha node is undefined

2_91_set_alpha_2.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89 **Blender Version** Broken: - 2.93.0 Alpha, branch: master, commit date: 2021-01-14 04:55, hash: `3e4dd7b000` - 2.92.0 Beta, branch: master, commit date: 2021-01-14 04:53, hash: `a4226a050b` Worked: For nodes outside of nodes groups, but not for nodes groups, before commit 38df935c09 **Short description of error** Loading a file in Blender 2.92 and 2.93 created with Blender 2.91 with a *Set Alpha* node in the compositing node tree outside of a node group, results in an undefined node. **Exact steps for others to reproduce the error** - Open the attached file created with Blender 2.91 - Observe that the *Set Alpha* node is undefined [2_91_set_alpha_2.blend](https://archive.blender.org/developer/F9578558/2_91_set_alpha_2.blend)
Author
Member

Added subscriber: @rjg

Added subscriber: @rjg
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Robert Guetzkow self-assigned this 2021-01-14 13:20:12 +01:00

This issue was referenced by c399651637

This issue was referenced by c399651637a3a9c8e416b8baffc571fa8cfa571f
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.92 milestone 2023-02-08 16:14:51 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84708
No description provided.